# x264-encoder

./: CMakeLists.txt  README.md  main.cpp  openmp-pseudo.cpp  video-encoder.code-workspace
